gcc/testsuite/gnat.dg/specs/float_literal1.ads
package Float_Literal1 is

  F : Float := 1.1e11111111111; -- { dg-error "not in range|fails" }

end Float_Literal1;
